--- a/bitrise.yml
+++ b/bitrise.yml
@@ -54,4 +54,4 @@ workflows:
     - deploy-to-bitrise-io@1: {}
     meta:
       bitrise.io:
-        stack: osx-xcode-12.1.x
+        stack: osx-xcode-{XCODE_VERSION}
